fix to scrollbar color

--- a/src/app.css
+++ b/src/app.css
@@ -8,7 +8,7 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: hsl(var(--nc));
+  background-color: hsl(var(--bc));
   border-radius: 10px;
   width: 10px;
   height: 10px;
